fix Add Existing User so that all the typeahead dropdown is visible in SF also

--- a/src/css/scriptureforge/default/sf.css
+++ b/src/css/scriptureforge/default/sf.css
@@ -875,6 +875,10 @@ div.new-item {
 	margin: 20px 0 20px 0;
 }
 
+div.new-item.collapse.in {
+	overflow: visible;
+}
+
 .activity-date {
 	font-size:12px;
 }
