--- a/src/css/scriptureforge/jamaicanpsalms/sf-jamaica.css
+++ b/src/css/scriptureforge/jamaicanpsalms/sf-jamaica.css
@@ -679,6 +679,10 @@ div.new-item {
 	margin: 20px 0 20px 0;
 }
 
+div.new-item.collapse.in {
+	overflow: visible;
+}
+
 .activity-date {
 	font-size:12px;
 }
